src/styles.css
:root{
	/*--xiketic: #0D0207;
	*/
	--blackCoffee: #383438;
	--malachite: #00DB71;
	--frenchViolet: #7100D9;
	--dogwoodRose: #DA0061;
	--lavenderWeb: #E1DEF9;
	--smokyBlack: #141314;
	
	--fontSize: 4vw;
	--colorPrimary: #E1DEF9;
	--colorSecondary: #00DB71;
	--windowColor: #141314;
	--headerColor: #0D0207;
	--buttonColor: #DA0061;
	--footerColor: #383438;
	--sidebarColor: #0D0207;
	--gameButtonColor: #E1DEF9;
}

html,
body{
	padding: 0;
	margin: 0;
	width: 100%;
	height: 100%;
	font-size: 62.5%;
	overflow: scroll;
	user-select: none;
	font-family: 'Roboto Condensed', Sans-Serif;
	color: var(--colorPrimary);
	background-color: var(--windowColor);
}

#root{
	display: flex;
	height: 100%;
	width: 100%;
	flex-flow: column;
	overflow: scroll;
	font-size: var(--fontSize);
	box-sizing: border-box;
}

#root > header{
	z-index: 90;
	background-color: var(--headerColor);
}

header > .container{
	display: flex;
	padding: 2%;
	box-sizing: border-box;
}

header #title{
	margin: 0;
	flex: 1 0 auto;
	align-self: center;
	font-size: 1.45em;
}

#root > .content{
	flex: 1 1 auto;
	width: 100%;
	height: 50%;
	display: flex;
	flex-wrap: wrap;
	overflow: scroll;
}

header,
footer{
	color: var(--lavenderWeb);
	width: 100%;
	box-sizing: border-box;
}

#root > footer{
	padding: 1%;
}

header #title, h2, h3, h4, button{
	font-family: 'Noto Serif', Sans-Serif;
}

h3{
	font-size: 1em;
}

h4, span{
	font-size: .9em;
}

button{
	color: var(--colorPrimary);
	font-size: .9em;
}

@media only screen and (orientation: landscape) {
	#root{
		font-size: calc(4 * 100vh / 100);
	}
	
	header > .container{
		padding: calc(2 * 100vh / 100);
	}
}

